# owtf

./: .dockerignore  .pre-commit-config.yaml  .readthedocs.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  SECURITY.md  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: main.yml
docker/: Dockerfile.backend  Dockerfile.frontend  docker-compose.dev.yml
docs/: README.md  conf.py  docs-requirements.txt  help.rst  owtf.utils.rst  ssl_interception.md  troubleshooting.rst
docs/_static/: owtf.css
docs/installation/: methods.rst
docs/usage/: starting.rst
infra/aws-terraform/: README.md  alb.tf  apply-script.sh  ec2.tf  iam.tf  nat-gateway.tf  output.tf  provider.tf  variables.tf  vpc.tf
infra/azure-terraform/: .gitignore  README.md  install-ansible.sh  network.tf  outputs.tf  owtf-setup.yml  provider.tf  security.tf  variables.tf  vm.tf
infra/azure-terraform/ssh-keys/: README.md
infra/kubernetes/: Dockerfile.backend  Dockerfile.frontend  README.md  db-deployment.yaml  deploy-script.sh  owtf-backend-deployment.yaml  owtf-backend-service.yaml  owtf-frontend-configmap.yaml  owtf-frontend-deployment.yaml  owtf-frontend-service.yaml
owtf/: ENHANCED_HTTPS_INTERCEPTION.md  config.py  settings.py
owtf/api/: routes.py
owtf/api/handlers/: base.py  proxy.py  report.py
owtf/lib/: exceptions.py
owtf/managers/: config.py  plugin.py  target.py
owtf/plugin/: runner.py
owtf/proxy/: gen_cert.py  https_interceptor.py  interceptor_manager.py  live_interceptor.py  main.py  proxy.py  socket_wrapper.py
owtf/proxy/docs/: API_Reference.md  Getting_Started.md  HTTPS_Interception.md  Interceptor_System.md  Proxy_Architecture.md  Proxy_Logging.md  README.md
owtf/proxy/interceptors/: __init__.py  base.py  body_modifier.py  delay_injector.py  header_modifier.py  url_rewriter.py
owtf/requester/: base.py
owtf/scripts/: run_arachni.sh  run_w3af.sh  update_cms_explorer_lists.py  verify_nikto.py
owtf/scripts/set/phishing/: send_attack.py
owtf/scripts/ssl/: reporter.py
owtf/transactions/: base.py  main.py
owtf/utils/: http.py
owtf/webapp/: package-lock.json  package.json
owtf/webapp/server/: index.ts  logger.ts
owtf/webapp/src/: reducers.ts  sagas.ts
owtf/webapp/src/components/InterceptorManager/: CreateInterceptorModal.tsx  InterceptorCard.tsx  InterceptorConfigModal.tsx  index.tsx  (+1 more)
owtf/webapp/src/sass/: main.scss
owtf/webapp/src/utils/: validation.ts
owtf/webapp/webpack/: common.config.ts  dev.config.ts  prod.config.ts
requirements/: base.txt  dev.txt  docs.txt  test.txt
scripts/: generate_test_proxy_data.py  install.sh  install_tools.py  manage_proxy_logs.py
tests/: owtftest.py  utils.py
tests/functional/proxy/: __init__.py  test_gen_cert.py  test_https_interception.py  test_ssl_interception.py
tests/suite/: categories.py
(+39 files in other folders)
